<resources>
    <string name="app_name">D Diner App</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_email">Sign in with email</string>
    <string name="error_happened">Alguma coisa deu errado!</string>
    <string name="invalid_authentication">Você ainda não pode acessar o App!</string>
    <string name="lanches_category">Lanches</string>
    <string name="pratos_category">Pratos</string>
    <string name="bebidas_category">Bebidas</string>
    <string name="sobremesas_category">Sobremesas</string>
    <string name="make_your_pizza">Monte sua Pizza</string>
    <string name="logo_light_part">Logo Light Part</string>
    <string name="logo_shadow">Logo Shadow</string>
    <string name="restaurant_icon">Restaurant Icon</string>
    <string name="d_text">D Text</string>
    <string name="iner_text">Iner text</string>
    <string name="observations_warn">Observações (Somente retirada)</string>
    <string name="observations">Observações (Retirada)</string>
    <string name="send_order">Enviar pedido</string>
    <string name="payment_voucher">COMPROVANTE DE PAGAMENTO</string>
    <string name="payment_finished">Pagamento Realizado</string>
    <string name="see_voucher">VER COMPROVANTE</string>
    <string name="voucher_saved">Comprovante salvo com sucesso.</string>
    <string name="documents_path">/Documents/%s.pdf</string>
    <string name="completed_order">Pedido concluído</string>
    <string name="see_order_details">Ver detalhes do pedido</string>
    <string name="completed_orders">Pedidos Feitos</string>
</resources>