<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    app:layoutDescription="@xml/activity_splash_scene"
    tools:context=".featureSplash.SplashActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dark_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_shadow"
            android:src="@drawable/dark_logo_d"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/light_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/logo_light_part"
            android:src="@drawable/light_logo_d"
            app:layout_constraintBottom_toBottomOf="@id/dark_logo"
            app:layout_constraintEnd_toEndOf="@id/dark_logo"
            app:layout_constraintStart_toStartOf="@id/dark_logo"
            app:layout_constraintTop_toTopOf="@id/dark_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/restaurant_icon"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/restaurant_icon"
        android:src="@drawable/restaurant_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo_d" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/diner_text"
        android:layout_width="wrap_content"
        android:layout_height="-1dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/d_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/d_text"
            android:src="@drawable/d_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/iner_text"
            android:src="@drawable/d_diner_text"
            app:layout_constraintBottom_toBottomOf="@id/d_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/d_text"
            app:layout_constraintTop_toTopOf="@id/d_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>